Release notes for xmlBlaster (http://www.xmlBlaster.org)
The "#99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o #16744 Incompatible change of security plugin I_Session:
          1) Added method 'public ConnectQosServer init(ConnectQosServer connectQos, Map map)'
	  You need to add a dummy implementation if you use an own security plugin:
            public ConnectQosServer init(ConnectQosServer connectQos, Map map) throws XmlBlasterException {
              return connectQos;
            }
          2) Removed unused method public String init(String securityQos_literal)
	  3) The method public boolean verify(I_SecurityQos securityQos) can now throw an XmlBlasterException

          Session configuration in ConnectQos: maxSessions and clearSessions can now be
	  controlled in a security plugin to behave for pubSessionId<0 and pubSessionId>0 differently.
	  Remote configuration with ConnectQos is not yet implemented.
	  See ConnectQosServer#setSessionLimitsPubSessionIdSpecific(boolean)

 o #16738 Extended remoteProperty handling from clients (similar to existing jconsole functionality)
          Create a remote property:
            java javaclients.HelloWorldPublish -oid __sys__remoteProperties -connect/qos/clientProperty[__remoteProperties] true -connect/qos/clientProperty[myProperty] AAAAAA -session.name OTHER/1
          Access it:
            java javaclients.HelloWorldGet -clientProperty[__sessionName] OTHER/1 -oid __sys__remoteProperties
          Destroy it:
            java javaclients.HelloWorldPublish -oid __sys__remoteProperties -clientProperty[__sessionName] OTHER/1 -content clear

 o #16729 Added database dead lock recovery, on deadlock retry once.
          Added delegate for DB access to retry on dead lock situation (seldom case with SQLServer)
          Globales Setting (xmlBlaster.properties) to have old behaviour:
            xmlBlaster/useJdbcManagerDelegate=false